# aliens

./: .gitignore  README.md  pyproject.toml  run.sh
src/aliens/: alien.py  alien_invasion.py  bullet.py  button.py  colors.py  game_stats.py  scoreboard.py  settings.py  ship.py
