[project]
name = "aliens"
requires-python = ">=3.10"
version = "0.1.0"
description = "Alien Invasion Game in Python"
authors = [{ name = "Nabil Khalil", email = "nabilamirkhalil@gmail.com" }]
readme = "README.md"
packages = [{ include = "aliens", from = "src" }]
dependencies = [
    "pygame (>=2.6)"
]

[tool.poetry.group.test.dependencies]
ruff = ">=0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
